# rpi-ez-stream

./: .gitignore  Cargo.toml  MODULE_SCHEMA.md  README.md  TODO.md  build.rs  build.sh
.github/workflows/: release_publisher.yml  rust.yml
data/: edu.rpi.smashclub.ezstream.gschema.xml
gtk_tester/: Cargo.toml
gtk_tester/src/: lib.rs  testing_trait.rs
settings_data/: Cargo.toml
settings_data/src/: datatypes.rs  lib.rs
src/: edu.rpi.smashclub.RPIPR.gschema.xml  main.rs  main_application.rs
src/application_data/: application_state.rs  character_data.rs  data_trait.rs  mod.rs  player_data.rs  player_ids.rs
src/ui/: edu.rpi.smashclub.cmb  main_window.rs  main_window.ui  mod.rs
src/ui/actions/: initialize_character_select_data.rs  mod.rs  open_module_change_dialog.rs  set_css_player.rs  swap_p1_p2_data.rs  switch_to_css.rs  switch_to_mainscreen.rs  test_set_name.rs  test_write.rs  update_character_button_visibility.rs  write_data.rs
src/ui/character_select_screen/: character_select_button.rs  character_select_button.ui  character_select_screen.rs  character_select_screen.ui  mod.rs
src/ui/common/: mod.rs  player_name_entry.rs  player_name_entry.ui  score_widget.rs  score_widget.ui
src/ui/main_screen/: main_screen.rs  main_screen.ui  mod.rs  player_name_entry.rs  score_widget.rs  tournament_info_bar.rs  (+1 more)
ui/: edu.rpi.smashclub.cmb  main_window.css  main_window.ui  ui_resource.gresource.xml
ui/character_select_screen/: character_select_screen.ui
ui/main_screen/: main_screen.ui  tournament_info_bar.ui
ui/module_dialog/: layout.ui  module_dialog.ui
(+6 files in other folders)
