[package]
name = "ez-stream-oxidized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glib-build-tools = "0.20.0"
settings_data = { path = "./settings_data/" }

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
gtk4 = { version = "0.9.5", features = [ "v4_12" ] }
gtk_tester = { path = "./gtk_tester/" }
lazy_static = "1.5.0"
log = "0.4.25"
pango = { version = "0.20.9", features = [ "v1_56" ] }
pango-sys = { version = "0.20.9", features = [ "v1_56" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.138"
settings_data = { path = "./settings_data/" }
